# tracks-rs

./: Cargo.toml  build.rs  mod.template.json  qpm.json  qpm.shared.json
benches/: color.rs  float.rs  quat.rs  vec3.rs
shared/: bindings.h  wrappers.h
src/: easings.rs  ffi.rs  lib.rs  main.rs  modifiers.rs  point_data.rs  point_definition.rs
src/animation/: events.rs  game_object.rs  mod.rs  property.rs  tracks.rs
src/easings/: functions.rs  implementations.rs
src/graphing/: color_graphing.rs  float_graphing.rs  mod.rs  quat_graphing.rs  vec3_graphing.rs
src/modifiers/: float_modifier.rs  mod.rs  modifiers.rs  operation.rs  quaternion_modifier.rs  vector3_modifier.rs  vector4_modifier.rs
src/point_data/: float_point_data.rs  mod.rs  point_data.rs  quaternion_point_data.rs  vector3_point_data.rs  vector4_point_data.rs
src/point_definition/: float_point_definition.rs  mod.rs  point_definition.rs  point_definition_interpolation.rs  quaternion_point_definition.rs  vector3_point_definition.rs  vector4_point_definition.rs
src/values/: base.rs  base_ffi.rs  base_provider_context.rs  mod.rs  partial.rs  quat.rs  smooth.rs  smooth_rot.rs  static.rs  updatable.rs  value.rs  values.rs
tracks-window/: Cargo.toml
tracks-window/src/: main.rs
tracks-window/src/graphing/: color_graphing.rs  float_graphing.rs  mod.rs  quat_graphing.rs  vec3_graphing.rs
