[package]
name = "tracks-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[[bin]]
name = "tracks-window"
path = "src/main.rs"


[dependencies]
glam = { version = "0.30", features = [
    "core-simd",
] } #SIMD supported vector types\
palette = "0.7.6"
cfg-if = "1"
tracing = { version = "0.1", features = ["std"], default-features = false, optional = true}
tracing-subscriber = { version = "0.3", default-features = false, optional = true}
tracing-error = { version = "*", default-features = false, optional = true}
thiserror = "2"

# for reading and writing files
serde_json = { version = "1.0", optional = true }
ctor = "0.3.6"

# plotting
minifb = { version = "0.28", optional = true }
plotters = { version = "0.3", optional = true }

paranoid-android = { version = "*", optional = true }
log = "0.4"

[target.'cfg(target_os = "android")'.features]
default = ["json", "tracing", "android"]



[build-dependencies]
cbindgen = "0.28"

[features]
tracing = ["dep:tracing", "tracing-subscriber", "tracing-error"]
tracing_stdout = [
    "dep:tracing",
    "tracing-subscriber/fmt",
    "tracing-subscriber/fmt",
    "tracing-subscriber/env-filter",
    "tracing-subscriber/smallvec",
]
plot = ["dep:minifb", "dep:plotters"]
json = ["dep:serde_json"]
android = ["dep:paranoid-android"]
default = ["json", "plot", "tracing"]
