[package]
name = "tracks_rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
glam = { version = "0.30", features = [
    "core-simd",
] } #SIMD supported vector types\
palette = "0.7.6"
cfg-if = "1"
tracing = { version = "0.1", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-error = { version = "*", default-features = false }
thiserror = "2"
serde_json = { version = "1.0", optional = true }
ctor = "0.3.6"
paranoid-android = "*"

[target.'cfg(target_os = "windows")'.dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"
paranoid-android = { version = "*", optional = true }

[build-dependencies]
cbindgen = "0.28"

[features]
json = ["dep:serde_json"]
default = ["json"]
